# ai-fun

./: .gitmodules  2_makemore.ipynb  3_mlp.ipynb  4.ipynb  5_backprop.ipynb  6_wavenet.ipynb  7_gpt.ipynb  README.md  causal.ipynb  flake.nix  gen_workspace.sh  hello.ipynb  init.sh  init_remote.sh  micrograd.ipynb  micrograd_exercises.ipynb  modular_addition.ipynb  pos_encoding.ipynb  pyproject.toml  requirements.txt
