[tool.poetry]
name = "karpathy-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
wandb = "^0.16.1"
umap-learn = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
