[tool.poetry]
name = "ai-fun"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
wandb = "^0.16.1"
umap-learn = "^0.5.5"
einops = "^0.7.0"
fancy-einsum = "^0.0.3"
plotly = "^5.18.0"
tqdm = "^4.66.1"
pandas = "^2.1.4"
datasets = "^2.16.0"
transformers = "^4.36.2"
transformer-lens = "^1.12.0"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
